[package]
name = "rust-ljm"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["clock"] }
csv = "1.3.1"
flatbuffers = "24.3.25"
ljmrs = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47", features = ["full"] }

[features]
# Default: use static linking (safe & simple)
default = ["staticlib"]

# Optional: enable dynamic linking
dynlink = []

# Optional: static linking (explicit)
staticlib = []

[[bin]]
name = "streamer"
path = "src/main.rs"


